--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a basic HTML template.</p>
+    <h1>Tic-Tac-Toe</h1>
+    <div id="grid"></div>
+
+    <script src="script.js"></script> <!-- JavaScript-Datei für Spielsteuerung -->
 </body>
 
 <footer>
