--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheet.css') }}">
 </head>
 
 <body>
     <h1>Tic-Tac-Toe</h1>
     <div id="grid"></div>
 
-    <script src="script.js"></script> <!-- JavaScript-Datei für Spielsteuerung -->
+    <script src="{{ url_for('static', filename='script.js') }}"></script> <!-- JavaScript-Datei für Spielsteuerung -->
 </body>
 
 <footer>
-    <p>Heyy</p>
+    <button id="restart-btn"> neu Starten</button>
 </footer>
 
 </html>
